# Test1_Client

./: CMakeLists.txt  CMakePresets.json  product_backlogs.md  sprint_1.md
.github/agents/: DevEnvMgr.agent.md  Developer.agent.md  Reviewer.agent.md  ScrumMaster.agent.md  SprintOrchestrator.agent.md
src/: main.cpp
tests/: basic_test.cpp
